--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "name": "sschreier/sschreiercustomizingdisplaypromotionsincheckout",
   "description": "customize the display of promotions in the checkout",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "shopware-platform-plugin",
-  "license": "proprietary",
+  "license": "GPL-3.0-or-later",
   "authors": [
     {
       "name": "Sebastian Schreier",
